--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
     "sass": "^1.78.0"
   },
   "devDependencies": {
